--- a/styles/Architects.css
+++ b/styles/Architects.css
@@ -11,6 +11,9 @@
 .display-flex{
   display: flex;
 }
+.text-primary{
+  color: #FF900E;
+}
 .btn-primary{
   background-color: #FF900E;
   color: white;
@@ -18,8 +21,18 @@
   font-size: 1.25rem;
   font-weight: 600;
   border-radius: 8px;
-
-
+  border: none;
+}
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section{
+  margin-top: 130px;
+}
+.section-title{
+  font-size: 2.8rem;
+  font-weight: 700;
 }
 /* dark 02 */
 .text-gray{
@@ -72,9 +85,77 @@ margin-right: 30px;
 .banner-img{
   width: 100%;
 }
+/* team and feature related style */
+.teams{
+  align-items:center;
+
+}
+.team-img-container{
+   display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.our-features{
+  margin-left: 130px;
+  max-width: 530px;
+}
+#quick{
+  font-weight: 500;
+}
+
+/* some fact related style0 */
+.fact-description{
+  max-width: 540px;
+}
+
+.fact-number{
+  font-weight: 600;
+  font-size:2.8rem ;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+.fact-name{
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px;
+
+}
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+}
+
+.fact-card{
+  border:1px solid #FF900E;
+  height: 240px;
+  width: 240px;
+  border-radius: 8px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
 /* responsive media query  */
 @media screen and (max-width: 576px) {
-  .navbar, .nav-link{
+  .navbar,
+  .nav-link,
+  .teams{
     flex-direction: column;
+  }
+  .team-img-container{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .our-features{
+    margin-left: 20px;
+  }
+}
+
+/* medium size device */
+@media screen and (min-width:576px) and (max-width:992px) {
+  .teams{
+    flex-direction: column;
+  }
+  .our-features{
+    margin: 50px auto;
   }
 }
