--- a/styles/Architects.css
+++ b/styles/Architects.css
@@ -102,7 +102,27 @@ margin-right: 30px;
 #quick{
   font-weight: 500;
 }
+/* feature section related style */
+.feature{
+  gap: 140px;
+}
+#feature-section-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 21px;
+}
+.feature-card{
+  padding: 30px 30px 30px 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0.06);
+  margin-bottom: 20px;
+}
+.feature-card .feature-title{
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
 
+}
 /* some fact related style0 */
 .fact-description{
   max-width: 540px;
@@ -135,6 +155,22 @@ margin-right: 30px;
   justify-content: center;
 }
 
+/*sponsors related style */
+.sponsors-info{
+  width: 540px;
+  margin: 50px auto;
+  text-align: center;
+  
+  }
+.sponsors-company{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  }
+.sponsors-company img{
+    filter: grayscale(100%);
+  
+  }
+
 /* responsive media query  */
 @media screen and (max-width: 576px) {
   .navbar,
@@ -142,8 +178,18 @@ margin-right: 30px;
   .teams{
     flex-direction: column;
   }
-  .team-img-container{
+  .team-img-container, 
+  .facts-container,
+  .sponsors-company{
     grid-template-columns: repeat(1, 1fr);
+  }
+  .sponsors-company{
+    justify-items: center;
+    gap: 50px;
+  }
+  .facts-container{
+    justify-items: center;
+    gap: 24px;
   }
   .our-features{
     margin-left: 20px;
@@ -157,5 +203,11 @@ margin-right: 30px;
   }
   .our-features{
     margin: 50px auto;
+  }
+  .sponsors-company,
+  .facts-container{
+    grid-template-columns: repeat(2,1fr);
+    gap: 50px;
+    justify-items: center;
   }
 }
