--- a/styles/Architects.css
+++ b/styles/Architects.css
@@ -108,10 +108,10 @@ margin-right: 30px;
 }
 #feature-section-title{
   border-left: 5px solid #FF900E;
-  padding-left: 21px;
+  padding-left: 20px;
 }
 .feature-card{
-  padding: 30px 30px 30px 30px;
+  padding: 30px;
   border-radius: 8px;
   box-shadow: 0 4px 30px 0 rgba(0, 0, 0.06);
   margin-bottom: 20px;
@@ -122,6 +122,23 @@ margin-right: 30px;
   margin-top: 0px;
   margin-bottom: 0px;
 
+}
+
+#Experience-badge{
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -100px;
+
+}
+
+#Experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
+.featured-architect img {
+  width: 100%;
 }
 /* some fact related style0 */
 .fact-description{
@@ -175,6 +192,7 @@ margin-right: 30px;
 @media screen and (max-width: 576px) {
   .navbar,
   .nav-link,
+  .feature,
   .teams{
     flex-direction: column;
   }
@@ -194,11 +212,16 @@ margin-right: 30px;
   .our-features{
     margin-left: 20px;
   }
+
+  #Experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 }
 
 /* medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
-  .teams{
+  .teams, .feature {
     flex-direction: column;
   }
   .our-features{
@@ -209,5 +232,9 @@ margin-right: 30px;
     grid-template-columns: repeat(2,1fr);
     gap: 50px;
     justify-items: center;
+  }
+  #Experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
   }
 }
